# nabo

./: .gitignore  LICENSE  README.md  说明.md
nabo_coppelia/: child script.py  coppelia说明.md  nabo.ttm  nabo_py.ttt
nabo_core/: 000.ini  CMakeLists.txt  说明.md
nabo_core/nabo_output/: nabo.h  nabo.lib  nabo_config.h
nabo_core/src/balance/: cbic.cpp  cbic.h  com_data.cpp  com_data.h  mpc.cpp  mpc.h
nabo_core/src/common/: curve.cpp  curve.h
nabo_core/src/estimate/: estimator.cpp  estimator.h
nabo_core/src/estimate/include/: estimator.h
nabo_core/src/manager/: manager.cpp  manager.h  nabo.cpp
nabo_core/src/manager/include/: manager.h  nabo_config.h
nabo_core/src/plan/: plan.cpp  plan.h  plan_recover.cpp  plan_recover.h  plan_walk.cpp  plan_walk.h
nabo_core/src/robot/: cpg.cpp  cpg.h  imu.h  robot.cpp  robot.h
nabo_core/src/robot/include/: cpg.h  imu.h
nabo_core/test/: main.cpp  main.h
nabo_core/tools/: py_copy2mujoco.py  py_copy2vrep.py  py_copy2webots.py
nabo_core/utility/: algorithms.cpp  algorithms.h  eigen.h  ini.cpp  ini.h  iopack.cpp  iopack.h
nabo_core/utility/include/: iopack.h
nabo_mujoco/: 000.ini  CMakeLists.txt  main.cpp  nabo.xml  说明.md
nabo_mujoco/glfw/: libglfw.so.3
nabo_mujoco/mujoco/: libmujoco.so.3.1.1  mujoco.lib
nabo_mujoco/mujoco/mujoco/: mjdata.h  mjexport.h  mjmacro.h  mjmodel.h  mjplugin.h  mjrender.h  mjthread.h  mjtnum.h  mjui.h  mjvisualize.h  mjxmacro.h  mujoco.h
nabo_mujoco/nabo/: nabo.h  nabo_config.h
nabo_webots/: 说明.md
nabo_webots/controllers/my_controller/: 000.ini  CMakeLists.txt  my_controller  my_controller.cpp  nabo.h
nabo_webots/protos/: Floor.proto  RectangleArena.proto  TexturedBackground.proto  TexturedBackgroundLight.proto  robot.proto
nabo_webots/worlds/: nabo.wbt  test.wbt
